--- a/springboot-ehcache/src/main/resources/application.yml
+++ b/springboot-ehcache/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springboot-ehcache
-    username: root
-    password: 123456
+    url: jdbc:mysql://localhost:3306/springboot_ehcache?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    username: chengdu
+    password: chengdu
   cache:
     ehcache:
       config: classpath:ehcache.xml
