--- a/springboot-mybatis/src/main/resources/application.yml
+++ b/springboot-mybatis/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springboot-mybatis
-    username: root
-    password: 123456
+    url: jdbc:mysql://localhost:3306/springboot_mybatis?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    username: chengdu
+    password: chengdu
 # 开启驼峰式命名转换，映射关系：user_name-->userName
 mybatis:
   configuration:
